add : input button

--- a/login/register.html
+++ b/login/register.html
@@ -31,6 +31,8 @@
                 패스워드 확인
             </label>
             <input type="text" name="passwd" id="passwd2">
+
+            <input type="button" name="확인">
         </fieldset>
     </form>
 
