--- a/login/register.html
+++ b/login/register.html
@@ -18,19 +18,19 @@
             <label for="user-name">
                 이메일
             </label>
-            <input type="text" name="username" id="username">
+            <input type="email" name="user-name" id="user-name">
             <br />
 
             <label for="passwd">
                 패스워드
             </label>
-            <input type="text" name="passwd" id="passwd">
+            <input type="password" name="user-passwd" id="user-passwd">
             <br />
 
             <label for="passwd2">
                 패스워드 확인
             </label>
-            <input type="text" name="passwd" id="passwd2">
+            <input type="password" name="user-passwd" id="user-passwd2">
 
             <input type="button" name="확인">
         </fieldset>
