--- a/login/register.html
+++ b/login/register.html
@@ -31,8 +31,14 @@
                 패스워드 확인
             </label>
             <input type="password" name="user-passwd" id="user-passwd2">
+            <br/>
+            
+            <label for="gender-m">남자</label>
+            <input type="radio" name="gender" value="남자" id="gender-m">
+            <label for="gender-f">여자</label>
+            <input type="radio" name="gender" value="여자" id="gender-f">
 
-            <input type="button" name="확인">
+            <input type="button" value="확인">
         </fieldset>
     </form>
 
