--- a/login/register.html
+++ b/login/register.html
@@ -12,7 +12,7 @@
 
     <h1>회원가입 양식</h1>
 
-    <form action="">
+    <form action="" style="width: 400px; margin: 0 auto;">
         <fieldset>
             <legend> 회원가입 </legend>
             <label for="user-name">
@@ -37,6 +37,7 @@
             <input type="radio" name="gender" value="남자" id="gender-m">
             <label for="gender-f">여자</label>
             <input type="radio" name="gender" value="여자" id="gender-f">
+            <br/>
 
             <input type="button" value="확인">
         </fieldset>
