--- a/login/register.html
+++ b/login/register.html
@@ -37,6 +37,8 @@
             <input type="radio" name="gender" value="남자" id="gender-m">
             <label for="gender-f">여자</label>
             <input type="radio" name="gender" value="여자" id="gender-f">
+            <label for="gender-c">법인</label>
+            <input type="radio" name="gender" value="법인" id="gender-c">
             <br/>
 
             <input type="button" value="확인">
