--- a/login/register.html
+++ b/login/register.html
@@ -12,7 +12,7 @@
 
     <h1>회원가입 양식</h1>
 
-    <form action="" style="width: 400px; margin: 0 auto;">
+    <form action="" style="width: 400px; margin: 0 auto; display: flex; flex-direction: column; align-items: center;">
         <fieldset>
             <legend> 회원가입 </legend>
             <label for="user-name">
