--- a/login/register.html
+++ b/login/register.html
@@ -10,10 +10,10 @@
 
 <body>
 
-    <h1>회원가입 양식</h1>
+    <h1 style="align-items: center;">회원가입 양식</h1>
 
-    <form action="" style="width: 400px; margin: 0 auto; display: flex; flex-direction: column; align-items: center;">
-        <fieldset>
+    <form action="" style="width: 400px; margin: 0 auto;">
+        <fieldset style="align-items: center;">
             <legend> 회원가입 </legend>
             <label for="user-name">
                 이메일
@@ -39,6 +39,16 @@
             <input type="radio" name="gender" value="여자" id="gender-f">
             <label for="gender-c">법인</label>
             <input type="radio" name="gender" value="법인" id="gender-c">
+            <br/>
+            
+            <label for="major">학과</label>
+            <select id="major">
+                <option value="3">증강학과</option>
+                <option value="4" selected>데이터학과</option>
+                <option value="5">3D학과</option>
+                <option value="7">전기학과</option>
+                <option value="8">바이오학과</option>
+            </select>
             <br/>
 
             <input type="button" value="확인">
