add : textarea tag

--- a/login/register.html
+++ b/login/register.html
@@ -51,6 +51,10 @@
             </select>
             <br/>
 
+            <textarea cols="20" rows="5">
+                자기소개
+            </textarea>
+
             <input type="button" value="확인">
         </fieldset>
     </form>
