--- a/login/register.html
+++ b/login/register.html
@@ -51,10 +51,7 @@
             </select>
             <br/>
 
-            <br/>
-            <textarea cols="20" rows="3">
-            자기소개
-            </textarea>
+            <textarea cols="20" rows="3">자기소개</textarea>
             <br/>
 
             <label for="agree">가입동의</label>
