--- a/login/register.html
+++ b/login/register.html
@@ -51,7 +51,7 @@
             </select>
             <br/>
 
-            <textarea cols="20" rows="3">자기소개</textarea>
+            <textarea cols="20" rows="3" placeholder="자기소개"></textarea>
             <br/>
 
             <label for="agree">가입동의</label>
@@ -59,6 +59,8 @@
             <br/>
 
             <input type="button" value="확인">
+            <input type="reset" value="초기화">
+            
         </fieldset>
     </form>
 
