--- a/index.html
+++ b/index.html
@@ -5,22 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/base.css">
-    <style>
-        header{
-            color: blue;
-        }
-        main {
-            color: red;
-        }
-    </style>
-
-    <style>
-        header{
-            background-color: aliceblue;
-            color: red;
-        }
-    </style>
 </head>
 <body>
     
@@ -35,44 +19,11 @@
     <main>
         <h1>포트폴리오 - ari</h1>
         <a href="login">로그인</a>
-
-        <!-- 목록 -->
-        <ul>
-            <li>박태현</li>
-            <li>박준하</li>
-            <li>정수영</li>
-            <li>박경덕</li>
-        </ul>
-
-        <ol>
-            <li>임서영</li>
-            <li>김하영</li>
-            <li>김재영</li>
-            <li>최유림</li>
-        </ol>
-
-        <section>
-            2023
-            <a href="hello.html">박태현-안녕</a>
-
-            <article>
-                abcd
-            </article>
-
-            <article>
-                abcd
-            </article>
-
-        </section>
-
-        <section>
-            2022
-        </section>
-    </main>
-
-    <footer>
-        폴리택에서 만들었어요.
-    </footer>
+        <a href="ex_css/float/layout/layout1.html">layout1</a>
+        <a href="ex_css/float/layout/layout2.html">layout2</a>
+        <a href="ex_css/float/layout/layout3.html">layout3</a>
+        <a href="ex_css/float/layout/layout4.html">layout4</a>
+        <a href="ex_css/float/layout/layout5.html">layout5</a>
 
 </body>
 </html>
