--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
     
     <header>
         여기기 해더 영역 입니다.
-        로고와 메뉴가 같이 있어요.
         <nav>
             메뉴목록
         </nav>
     </header>
     
     <main>
-        <h1>포트폴리오 - ari</h1>
-        <a href="login">로그인</a>
+        <h1>포트폴리오 - 이승희</h1>
         <a href="ex_css/float/layout/layout1.html">layout1</a>
+        <br/>
         <a href="ex_css/float/layout/layout2.html">layout2</a>
+        <br/>
         <a href="ex_css/float/layout/layout3.html">layout3</a>
+        <br/>
         <a href="ex_css/float/layout/layout4.html">layout4</a>
+        <br/>
         <a href="ex_css/float/layout/layout5.html">layout5</a>
+        <br/>
 
 </body>
 </html>
