--- a/src/js/303/if01.html
+++ b/src/js/303/if01.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./if04.js"></script>
+    <script src="./for07.js"></script>
 </head>
 <body>
     <input type="button" onclick="calcAge()" value="나이">
